--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -754,8 +754,10 @@ a:hover {
 
 .hero .hero-title {
   color: #fff;
-  font-weight: 600;
+  font-weight: 400;
   font-size: 3rem;
+  font-family:"Jersey 15", sans-serif;
+  font-style: normal;
 }
 
 @media (min-width: 768px) {
